test/tests/stages/18_structures/invalid_types/extra_credit/other_features/postfix_decr_struct_arrow.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[50]:
  struct
  identifier(inner)
  {
  int
  identifier(i)
  ;
  }
  ;
  struct
  identifier(outer)
  {
  struct
  identifier(inner)
  identifier(s)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(outer)
  identifier(my_struct)
  =
  {
  {
  const int(1)
  }
  }
  ;
  struct
  identifier(outer)
  *
  identifier(ptr)
  =
  &
  identifier(my_struct)
  ;
  identifier(ptr)
  ->
  identifier(s)
  --
  ;
  return
  const int(0)
  ;
  }
